# cpp-design-patterns

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
builder/: StepBuilder1.h  StepBuilder2.h  StepBuilder3.h  StepBuilder4.h
cpp-design-patterns/: .gitignore  Main.cpp  Patterns.pro
cpp-design-patterns/builder/: StepBuilder1.cpp  StepBuilder1.h  StepBuilder2.cpp  StepBuilder2.h  StepBuilder3.cpp  StepBuilder3.h
cpp-design-patterns/factory/: Factory1.h
cpp-design-patterns/injection/: Injection1.h  Injection2.h  Injection3.h  Injection4.h  Injection5.h  Injection6.h  Inversion of Control.odt
expected/: Expected.h
injection/: Injection1.h  Injection2.h  Injection3.h  Injection4.h  Injection5.h  Injection6.h  Injection7.h  Injection8.h
mvc/: ModelViewController1.h  ModelViewController2.h  View.cpp  View.h
pimpl/: Car.cpp  Car.h  CarImpl.cpp  CarImpl.h  Label.cpp  Label.h  Label_p.h  README.md  Widget.cpp  Widget.h  Widget_p.h
pimpl/docs/: d-pointer.uxf
